--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.6"
 install:
-  - "pip install -r requirements.txt"
+  - "pip install --allow-all-external -r requirements.txt"
 script: |
   cd playbooks/edx-east
   ansible-playbook -i localhost, --syntax-check edxapp.yml
