--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ python:
   - "2.6"
 install:
   - "pip install --allow-all-external -r requirements.txt"
+  - "sudo apt-get install -y npm"
+  - "sudo npm install js-yaml"
 script: |
   cd playbooks/edx-east
   ansible-playbook -i localhost, --syntax-check edxapp.yml
+  js-yml -c edxapp.yml
