--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
   - "sudo apt-get install -y npm"
   - "sudo npm install js-yaml"
 script: |
+  JS_YAML="node_modules/js-yaml/bin/js-yaml.js
   cd playbooks/edx-east
   ansible-playbook -i localhost, --syntax-check edxapp.yml
-  js-yaml -c edxapp.yml
+  $JS_YAML -c edxapp.yml
