--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ python:
   - "2.6"
 install:
   - "pip install --allow-all-external -r requirements.txt"
-  - "sudo apt-get install -y npm"
-  - "sudo npm install -g js-yaml"
-script: |
-  cd playbooks/edx-east
-  ansible-playbook -i localhost, --syntax-check edxapp.yml
-  js-yaml -c edxapp.yml
+script:
+  - |
+    cd playbooks/edx-east
+    for play in *.yml; do
+      if ! grep -q "vars_prompt" $play; then
+        ansible-playbook -i localhost, --syntax-check --list-tasks $play
+      fi
+    done
