--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
   - "pip install --allow-all-external -r requirements.txt"
 script:
   - |
+    set -x
     cd playbooks/edx-east
     for play in *.yml; do
       if ! grep -q "vars_prompt" $play; then
